--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"files.associations": {
 		"minishell.h": "c",
-		"limits.h": "c"
+		"limits.h": "c",
+		"readline.h": "c",
+		"signal.h": "c"
 	}
 }
