--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,5 @@
 {
-	"files.associations": {
-		"minishell.h": "c",
-		"limits.h": "c",
-		"readline.h": "c",
-		"signal.h": "c",
-		"history.h": "c"
-	}
+    "files.associations": {
+        "minishell.h": "c"
+    }
 }
