Files: imported new Makefile to better sort the object files.

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -19,37 +19,42 @@ CFLAGS	= -Wall -Wextra -Werror
 MKFLAGS = --no-print-directory
 
 #_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_ FOLDERS _/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_
-DEPS = ../inc
+DEPS 	= ../inc
+OBJ_DIR = objs
 
 #_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_ FILES _/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_
-TARGET = 	ft_atoi.o ft_bzero.o ft_calloc.o ft_isalnum.o ft_isalpha.o ft_isascii.o ft_isdigit.o \
-			ft_isprint.o ft_itoa.o ft_memchr.o ft_memcmp.o ft_memcpy.o ft_memmove.o ft_memset.o \
-			ft_putchar_fd.o ft_putendl_fd.o ft_putnbr_fd.o ft_putstr_fd.o ft_split.o ft_strchr.o \
-			ft_strdup.o ft_striteri.o ft_strjoin.o ft_strlcat.o ft_strlcpy.o ft_strlen.o ft_strmapi.o \
-			ft_strncmp.o ft_strnstr.o ft_strrchr.o ft_strtrim.o ft_substr.o ft_tolower.o ft_toupper.o
-
-BONUS_TARGET = 	ft_lstadd_back.o ft_lstadd_front.o ft_lstclear.o \
-			ft_lstdelone.o ft_lstiter.o ft_lstlast.o \
-			ft_lstmap.o ft_lstnew.o ft_lstsize.o
-
-NAME = libft.a
+NAME			= libft.a
+_FILES			= ft_atoi ft_bzero ft_calloc ft_isalnum ft_isalpha ft_isascii ft_isdigit \
+					ft_isprint ft_itoa ft_memchr ft_memcmp ft_memcpy ft_memmove ft_memset \
+					ft_putchar_fd ft_putendl_fd ft_putnbr_fd ft_putstr_fd ft_split ft_strchr \
+					ft_strdup ft_striteri ft_strjoin ft_strlcat ft_strlcpy ft_strlen ft_strmapi \
+					ft_strncmp ft_strnstr ft_strrchr ft_strtrim ft_substr ft_tolower ft_toupper\
+					ft_lstadd_back ft_lstadd_front ft_lstclear \
+					ft_lstdelone ft_lstiter ft_lstlast \
+					ft_lstmap ft_lstnew ft_lstsize
+OBJS			= $(_FILES:%=%.o)
+TARGET			= $(addprefix $(OBJ_DIR)/, $(OBJS))
 
 #_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_ RULES _/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_
-%.o : %.c
-	@$(CC) $(CFLAGS) -c $< -o $@ -I $(DEPS)
 
 all: $(NAME)
 
-bonus: $(TARGET) $(BONUS_TARGET)
-	@$(AR) $(NAME) $^
+$(NAME): $(OBJ_DIR) $(TARGET)
+	$(AR) $(NAME) $(TARGET)
 
-$(NAME): $(TARGET)
-	@$(AR) $(NAME) $^
+$(OBJ_DIR)/%.o : %.c 
+	$(CC) $(CFLAGS) -c $< -o $@ -I $(DEPS)
+
+$(OBJ_DIR) :
+	mkdir -p $(OBJ_DIR)
 
 clean:
-	@$(RM) $(TARGET) $(BONUS_TARGET)
+	$(RM) $(TARGET)
 
 fclean: clean
-	@$(RM) $(NAME) $(BONUS_TARGET)
+	$(RM) $(NAME)
 
 re: fclean all
+
+.SILENT:
+
