--- a/libft/Makefile
+++ b/libft/Makefile
@@ -24,7 +24,7 @@ OBJ_DIR = ../objs
 
 #_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_ FILES _/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_/=\_
 NAME			= libft.a
-_FILES			= ft_atoi ft_bzero ft_calloc ft_isalnum ft_isalpha ft_isascii ft_isdigit \
+_FILES			= ft_atoi ft_atoull ft_bzero ft_calloc ft_isalnum ft_isalpha ft_isascii ft_isdigit \
 					ft_isprint ft_itoa ft_memchr ft_memcmp ft_memcpy ft_memmove ft_memset \
 					ft_putchar_fd ft_putendl_fd ft_putnbr_fd ft_putstr_fd ft_split ft_strchr \
 					ft_strdup ft_striteri ft_strjoin ft_strlcat ft_strlcpy ft_strlen ft_strmapi \
